--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@electron-forge/plugin-auto-unpack-natives": "^7.4.0",
     "@electron-forge/plugin-fuses": "^7.4.0",
     "@electron/fuses": "^1.8.0",
-    "electron": "^31.1.0"
+    "electron": "^31.1.0",
+    "yt-dlp-wrap": "^2.3.12"
   },
   "dependencies": {
+    "cli-progress": "^3.12.0",
     "electron-squirrel-startup": "^1.0.1"
   }
 }
